<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.profile.ProfileFragment"
    android:orientation="vertical"
    android:padding="24dp">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/strName"
        android:id="@+id/tbName"
        />

    <EditText
        android:inputType="textEmailAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/strEmail"
        android:id="@+id/tbEmail"
        />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/strAddress"
        android:id="@+id/tbAddress"
        />

</LinearLayout>